# slimmer

./: .gitignore  CMakeLists.txt  Config.cpp  Config.h  Controller.cpp  Screen.cpp  main.cpp
cmake/: curl.cmake  icu.cmake  jsoncpp.cmake  jsonrpccpp.cmake  lcdapi.cmake  libev.cmake  tclap.cmake  zlib.cmake
cmake/patches/: icu-filter.json  jsonrpccpp-catch.patch  jsonrpccpp.patch
docs/: libicu-TRACING.md
